{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 150,
  "lineage": "e35c11f3-f90a-d197-3ed8-2ca9068a6b3d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.46.251.216",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-12T00:26:10.604-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/stocks-451219/regions/us-central1/addresses/trading-app-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "trading-app-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "stocks-451219",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stocks-451219/regions/us-central1/addresses/trading-app-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/stocks-451219/zones/us-central1-a/instances/trading-app-vm"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_oslogin_from_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-12T00:27:32.232-07:00",
            "deny": [],
            "description": "Allow SSH via IAP tunnel for OS Login",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stocks-451219/global/firewalls/allow-ssh-oslogin-from-iap",
            "log_config": [],
            "name": "allow-ssh-oslogin-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/stocks-451219/global/networks/trading-app-network",
            "priority": 1000,
            "project": "stocks-451219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stocks-451219/global/firewalls/allow-ssh-oslogin-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_trading_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "4001",
                  "4003"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-12T00:26:53.658-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stocks-451219/global/firewalls/allow-trading-app",
            "log_config": [],
            "name": "allow-trading-app",
            "network": "https://www.googleapis.com/compute/v1/projects/stocks-451219/global/networks/trading-app-network",
            "priority": 1000,
            "project": "stocks-451219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stocks-451219/global/firewalls/allow-trading-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "trading_app_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "TDX_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "UEFI_COMPATIBLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "IDPF",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-117-18613-263-4",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stocks-451219/zones/us-central1-a/disks/trading-app-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-12T00:26:54.662-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/stocks-451219/zones/us-central1-a/instances/trading-app-vm",
            "instance_id": "8615441525365283921",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "gce-container-declaration": "spec:\n  containers:\n    - name: trading-app\n      image: us-central1-docker.pkg.dev/stocks-451219/janus-repo/janus:future\n      env:\n        - name: TWS_USERID\n          value: \"garciaj42\"\n        - name: TRADING_MODE\n          value: \"paper\"\n        - name: READ_ONLY_API\n          value: \"no\"\n        - name: TWOFA_TIMEOUT_ACTION\n          value: \"restart\"\n        - name: AUTO_RESTART_TIME\n          value: \"11:59 PM\"\n        -  [...]
              "user-data": "#cloud-config\nruncmd:\n  - sudo chmod 666 /var/run/docker.sock\n  - gcloud auth configure-docker us-central1-docker.pkg.dev\n"
            },
            "metadata_fingerprint": "YMcWMVHxE_U=",
            "name": "trading-app-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.46.251.216",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stocks-451219/global/networks/trading-app-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stocks-451219/regions/us-central1/subnetworks/trading-app-network",
                "subnetwork_project": "stocks-451219"
              }
            ],
            "project": "stocks-451219",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stocks-451219/zones/us-central1-a/instances/trading-app-vm",
            "service_account": [
              {
                "email": "stocks@stocks-451219.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "trading-app"
            ],
            "tags_fingerprint": "0hHeNHa_eM8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "gce-container-declaration",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.google_secret_manager_secret.tws_password",
            "data.google_secret_manager_secret_version.tws_password",
            "google_compute_address.static_ip",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/stocks-451219/global/networks/trading-app-network",
            "mtu": 0,
            "name": "trading-app-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8653905165114154108",
            "numeric_id": "8653905165114154108",
            "project": "stocks-451219",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stocks-451219/global/networks/trading-app-network"
          }
        }
      ]
    }
  ]
}